test/spec_vectors/simd_f32x4_cmp/fail/module_2.wat
(module (func (result v128) (f32x4.ge (i64.const 0) (f64.const 0))))